--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
+    "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.0.2",
     "@angular/material": "^9.2.4",
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.3.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
